<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/balance"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_attach_money_white_24dp"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/current"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current"/>
        <RadioButton
            android:id="@+id/saving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Saving"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <com.google.android.material.button.MaterialButton
            android:padding="10dp"
            android:id="@+id/material_button"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_account_balance_white_24dp"
            app:iconGravity="textStart"
            android:onClick="Account"
            android:text="@string/submit"/>

    </RelativeLayout>

</LinearLayout>